--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "franc": "^2.0.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
+    "striptags": "^2.1.1",
     "xml2js": "^0.4.17"
   },
   "devDependencies": {
