add dynamo db and list function + endpoint

--- a/serverless.yml
+++ b/serverless.yml
@@ -12,9 +12,9 @@ provider:
     SERVERLESS_STAGE: ${opt:stage, self:provider.stage}
     SERVERLESS_PROJECT: ${self:service}
     SERVERLESS_REGION: ${opt:region, self:provider.region}
-    BLOG_BUCKET: ${self:provider.environment.SERVERLESS_PROJECT}-blog-2-${self:provider.environment.SERVERLESS_STAGE}
-    PODCAST_BUCKET: ${self:provider.environment.SERVERLESS_PROJECT}-podcast-2-${self:provider.environment.SERVERLESS_STAGE}
-#    TABLE_NAME: ${self:provider.environment.SERVERLESS_PROJECT}-sessions-${self:provider.environment.SERVERLESS_STAGE}
+    BLOG_BUCKET: ${self:provider.environment.SERVERLESS_PROJECT}-blog-${self:provider.environment.SERVERLESS_STAGE}
+    PODCAST_BUCKET: ${self:provider.environment.SERVERLESS_PROJECT}-podcast-${self:provider.environment.SERVERLESS_STAGE}
+    TABLE_NAME: ${self:provider.environment.SERVERLESS_PROJECT}-blog-podcast-${self:provider.environment.SERVERLESS_STAGE}
   iamRoleStatements:
     - Effect: Allow
       Action:
@@ -49,17 +49,22 @@ package:
 functions:
   list:
     handler: list/index.handler
+    events:
+      - http:
+          path: items
+          method: get
+          cors: true
+          integration: lambda-proxy
   aggregate:
     handler: aggregate/index.handler
     timeout: 30
     events:
       - schedule: rate(10 minutes)
-
   convert:
     handler: convert/index.handler
     events:
       - s3:
-          bucket: ${self:provider.environment.BLOG_BUCKET}
+          bucket: ${self:provider.environment.BLOG_BUCKET} # ALSO CREATES THE BUCKET !!!
           event: s3:ObjectCreated:*
 
 plugins:
@@ -74,10 +79,6 @@ custom:
 
 resources:
   Resources:
-# setting event will create the Blog bucket !!! --> notice the logical name containing stage
-#    S3BucketEtblogpollyblogdev:
-#      Type: AWS::S3::Bucket
-
     PodcastBucket:
       Type: AWS::S3::Bucket
       Properties:
@@ -100,6 +101,20 @@ resources:
               - - 'arn:aws:s3:::'
                 - Ref: PodcastBucket
                 - "/*"
+    BlogPodcastTable:
+      Type: AWS::DynamoDB::Table
+      DeletionPolicy: Retain
+      Properties:
+        AttributeDefinitions:
+          - AttributeName: id
+            AttributeType: S
+        KeySchema:
+          - AttributeName: id
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
+        TableName: ${self:provider.environment.TABLE_NAME}
 
 #resources:
 #  Resources:
