remove list function, dynamodb and api gateway

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bluebird": "^3.4.7",
     "franc": "^2.0.0",
     "html-entities": "^1.2.0",
+    "podcast": "^0.2.2",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "striptags": "^2.1.1",
