--- a/serverless.yml
+++ b/serverless.yml
@@ -1,6 +1,6 @@
 frameworkVersion: ">=1.2.0 <2.0.0"
 
-service: et-blog-polly # NOTE: update this with your service name
+service: blog-polly # NOTE: update this with your service name
 
 provider:
   name: aws
